Slide di introduzione e progetto linkato dal tutorial

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -76,9 +76,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30207852-0805-4fc4-ab33-13be60ee5049",
+   "metadata": {},
+   "source": [
+    "# Progetto \n",
+    "\n",
+    "Vedremo il calcolo del rendimento medio di titoli, secondo il calcolo di alcuni parametri di questi titoli.\n",
+    "\n",
+    "  - [Foglio di Lavoro del progetto](./rendimentomedio/RendimentoMedio.ipynb)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "794777b5-9174-41ae-9485-f60215d70177",
+   "id": "dd3ac4c3-8b4a-4aae-bd2f-4a5d083208b6",
    "metadata": {},
    "outputs": [],
    "source": []
