--- a/rendimentomedio/RendimentoMedio.ipynb
+++ b/rendimentomedio/RendimentoMedio.ipynb
@@ -2052,7 +2052,7 @@
    }
   ],
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2066,7 +2066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.3"
   },
   "title": "Statistiche sul rendimento di titoli"
  },
