--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -66,7 +66,10 @@
   {
    "cell_type": "markdown",
    "id": "302a8cc3-22e1-48dc-9e20-73e53cf3b378",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## 5. Esercizi\n",
     "\n",
@@ -86,19 +89,11 @@
     "\n",
     "  - [Foglio di Lavoro del progetto](./rendimentomedio/RendimentoMedio.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd3ac4c3-8b4a-4aae-bd2f-4a5d083208b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
